# Maybank-Singapore-Senior-Data-Scientist-Test

./: README.md  Slides.pptx  pyproject.toml
maybank/: .gitignore  Makefile  lint.sh
maybank/conf/base/: catalog.yaml  encoder.yaml  models.yaml  parameters.yaml
maybank/data/models/: C_EDU_encoder_20240331_225112.pkl  C_HSE_encoder_20240331_225112.pkl  INCM_TYP_encoder_20240331_225111.pkl  gn_occ_encoder_20240331_225112.pkl
maybank/data/predicted/: EDA.html
maybank/data/preprocessed/: EDA.html
maybank/data/raw/: EDA.html  metadata.csv
maybank/docs/: conf.py  feature_engineering.rst  modeling.rst  pipelines.rst  utils.rst
maybank/docs/_build/doctrees/: data_processing.doctree  environment.pickle  feature_engineering.doctree  index.doctree  modeling.doctree  modules.doctree  pipelines.doctree  utils.doctree
maybank/docs/_build/html/: .buildinfo  data_processing.html  feature_engineering.html  genindex.html  index.html  modeling.html  modules.html  objects.inv  pipelines.html  py-modindex.html  search.html  searchindex.js  utils.html
maybank/docs/_build/html/_modules/: index.html
maybank/docs/_build/html/_sources/: data_processing.rst.txt  index.rst.txt  modules.rst.txt
maybank/notebooks/: analysis_notebook.ipynb  main_notebook.ipynb
maybank/src/data_processing/: data_loading.py  data_preprocessing.py  data_sampling.py
maybank/src/feature_engineering/: feature_engineering.py
maybank/src/modeling/: modeling.py
maybank/src/pipelines/: data_pipeline.py  main_pipeline.py  model_pipeline.py
maybank/src/utils/: utils.py
(+8 files in other folders)
