[tool.poetry]
name = "maybank"
version = "0.1.0"
description = "Environment for Project"
authors = ["Samuel <samuelsimweixuan@gmail.com>"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
kedro = "^0.19.3"
ruff = "^0.3.4"
ipykernel = "^6.29.3"
pandas = "^2.2.1"
sweetviz = "^2.3.1"
scikit-learn = "^1.4.1.post1"
imbalanced-learn = "^0.12.0"
nbformat = "^5.10.3"
xgboost = "^2.0.3"
optuna = "^3.6.0"
black = "^24.3.0"
flake8 = "^7.0.0"
sphinx = "^7.2.6"
sphinx-autobuild = "^2024.2.4"
sphinx-rtd-theme = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
